# graxil

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  fix_algorithm.sh  lints.toml  log4rs_sample.yml  test_bits.rs
.github/workflows/: audit.yml  build_binaries.json  build_binaries.yml  ci.yml  pr.yml
examples/: device_detection.rs  gpu_device_types.rs
kernels/opencl/: sha3x.cl
src/: dashboard.html  lib.rs  main.rs  main_monolithic.rs  sv2_protocol.rs  web_server.rs
src/benchmark/: jobs.rs  mod.rs  profiler.rs  runner.rs
src/core/: difficulty.rs  mod.rs  sha256.rs  sha3x.rs  types.rs
src/help/: benchmarks.rs  commands.rs  mining.rs  mod.rs
src/miner/: mod.rs
src/miner/cpu/: miner.rs  mod.rs  thread.rs
src/miner/gpu/: gpu_information_file.rs  gpu_miner.rs  manager.rs  mod.rs  status_file.rs
src/miner/gpu/opencl/: device.rs  engine.rs  mod.rs
src/miner/stats/: gpu_info.rs  miner_stats.rs  mod.rs  thread_stats.rs
src/pool/: client.rs  messages.rs  mod.rs  protocol.rs
src/utils/: format.rs  mod.rs  user_agent.rs
supply-chain/: config.toml
tests/: bench_batching.rs  bench_hashing.rs  bench_threading.rs  information_file_test.rs  integration_test.rs  sha3x_test.rs  status_file_test.rs
