[package]
name = "graxil"
version = "1.0.12"
edition = "2024"
description = "High-performance SHA3x (Tari) CPU/GPU miner with hybrid mode"
license = "MIT"
repository = "https://github.com/tari-project/graxil"
rust-version = "1.85" # Meets 2024 edition requirement

[dependencies]
# Core dependencies
sha3 = "0.10.8"                                             # Stable version for SHA3X
sha2 = "0.10.8"                                             # Added for SHA-256
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.27"
log4rs = "1.3.0"
clap = { version = "4.5.18", features = ["derive"] }
num_cpus = "1.16.0"
rand = "0.8.5"
crossbeam = "0.8.4"
uint = "0.10.0"
axum = { version = "0.7", features = ["ws"] }
sysinfo = "0.35.2"

# Tari packages
tari_common = { git = "https://github.com/tari-project/tari.git", tag = "v4.8.0" }

# GPU Mining dependencies (OpenCL)
opencl3 = { version = "0.9.5", optional = true }
anyhow = "1.0.89"

# SV2 from git repository 
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
codec_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
binary_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }

# Utilities
thiserror = "1.0"

# TUI dependencies (optional)
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }

[features]
default = ["gpu"]
tui = ["ratatui", "crossterm"]
cpu = []                           # CPU-only mining
gpu = ["opencl3"]                  # GPU-only mining (385+ MH/s)  
hybrid = ["cpu", "gpu", "opencl3"] # CPU+GPU hybrid mining (400+ MH/s)

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "graxil"
path = "src/main.rs"

[[bin]]
name = "gpu_test"
path = "src/bin/gpu_test.rs"

[[example]]
name = "gpu_device_types"
path = "examples/gpu_device_types.rs"
required-features = ["gpu"]

[[example]]
name = "device_detection"
path = "examples/device_detection.rs"
required-features = ["gpu"]

[package.metadata.cargo-machete]
ignored = [
    "log4rs"
]